# spark-connect-go

./: .asf.yaml  .gitignore  .gitmodules  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  buf.gen.yaml  buf.work.yaml  devenv.nix  go.mod  go.sum  merge_connect_go_pr.py  quick-start.md
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: build.yaml  build.yml  coverage.yml
client/channel/: BUILD.bazel  channel.go  channel_test.go
client/mocks/: mocks.go
client/session/: sparksession.go
client/sparkerrors/: BUILD.bazel  errors.go
client/sql/: BUILD.bazel  dataframe.go  dataframe_test.go  dataframereader.go  dataframereader_test.go  dataframewriter.go  dataframewriter_test.go  datatype.go  executeplanclient.go  mocks_test.go  sparksession.go  sparksession_test.go  structtype.go
client/sql/session/: sparksession_test.go
cmd/spark-connect-example-raw-grpc-client/: BUILD.bazel  main.go
cmd/spark-connect-example-spark-session/: BUILD.bazel  main.go
dev/: .rat-excludes  README.md  gen.py  release.py  requirements.txt  sync-protos-from-spark.sh
internal/tests/integration/: dataframe_test.go  df_test.go  functions_test.go  helper.go  spark_runner.go  sql_test.go
java/: README.md  build.sbt  run.sh
java/src/main/scala/org/apache/spark/golang/: Runner.scala
spark/: version.go
spark/channel/: channel.go  channel_test.go  compat.go
spark/client/: client.go  client_test.go  conf.go  retry.go  retry_test.go
spark/client/base/: base.go
spark/client/channel/: channel.go  channel_test.go  compat.go
spark/client/options/: options.go
spark/client/testutils/: utils.go
spark/mocks/: mock_executor.go  mocks.go
spark/sparkerrors/: errors.go  errors_test.go
spark/sql/: column.go  column_test.go  dataframe.go  dataframe_test.go  dataframenafunctions.go  dataframereader.go  dataframereader_test.go  dataframestatfunctions.go  dataframewriter.go  dataframewriter_test.go  datatype.go  executeplanclient.go  expressions.go  expressions_test.go  group.go  group_test.go  mocks_test.go  plan.go  plan_test.go  row.go  row_test.go  sparksession.go  sparksession_integration_test.go  sparksession_test.go
spark/sql/column/: column.go  column_test.go  expressions.go  expressions_test.go
spark/sql/expression/: expression.go  expression_test.go
spark/sql/functions/: buiitins.go  generated.go
spark/sql/literal/: literal.go  literal_test.go
spark/sql/session/: sparksession.go  sparksession_test.go
spark/sql/types/: arrow.go  arrow_test.go  builtin.go  builtin_test.go  conversion.go  conversion_test.go  datatype.go  datatype_test.go  row.go  row_json_test.go  row_test.go  rowiterator.go  rowiterator_test.go  structtype.go  structtype_test.go
spark/sql/utils/: check.go  check_test.go  consts.go  consts_test.go
