module(name = "spark-connect-go", version = "1.0")


bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "protobuf", version = "27.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.0-alpha2")


go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Weirdness...
go_deps.gazelle_override(
    path="google.golang.org/protobuf",
    directives=[
        "gazelle:proto disable"
    ]
)

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_apache_arrow_go_v12",
    "com_github_google_uuid",
    "org_golang_google_grpc",
    "com_github_stretchr_testify",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
)