load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "channel",
    srcs = [
        "channel.go",
        "compat.go",
    ],
    importpath = "github.com/apache/spark-connect-go/v35/client/channel",
    visibility = ["//visibility:public"],
    deps = [
        "//client/sparkerrors",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "channel_test",
    srcs = ["channel_test.go"],
    deps = [
        ":channel",
        "//client/sparkerrors",
        "@com_github_stretchr_testify//assert",
    ],
)
