load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sql",
    srcs = [
        "dataframe.go",
        "dataframereader.go",
        "dataframewriter.go",
        "datatype.go",
        "executeplanclient.go",
        "plan.go",
        "row.go",
        "sparksession.go",
        "structtype.go",
    ],
    importpath = "github.com/apache/spark-connect-go/v35/client/sql",
    visibility = ["//visibility:public"],
    deps = [
        "//client/channel",
        "//client/sparkerrors",
        "//:spark_connect_proto_grpc",
        "@com_github_apache_arrow_go_v12//arrow",
        "@com_github_apache_arrow_go_v12//arrow/array",
        "@com_github_apache_arrow_go_v12//arrow/ipc",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//metadata",
    ],
)

go_test(
    name = "sql_test",
    srcs = [
        "dataframe_test.go",
        "dataframereader_test.go",
        "dataframewriter_test.go",
        "mocks_test.go",
        "plan_test.go",
        "row_test.go",
        "sparksession_test.go",
    ],
    embed = [":sql"],
    deps = [
        "//client/sparkerrors",
        "@com_github_apache_arrow_go_v12//arrow",
        "@com_github_apache_arrow_go_v12//arrow/array",
        "@com_github_apache_arrow_go_v12//arrow/decimal128",
        "@com_github_apache_arrow_go_v12//arrow/decimal256",
        "@com_github_apache_arrow_go_v12//arrow/float16",
        "@com_github_apache_arrow_go_v12//arrow/ipc",
        "@com_github_apache_arrow_go_v12//arrow/memory",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
