load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "spark-connect-example-raw-grpc-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/apache/spark-connect-go/v35/cmd/spark-connect-example-raw-grpc-client",
    visibility = ["//visibility:private"],
    deps = [
        "//:spark_connect_proto_grpc",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "spark-connect-example-raw-grpc-client",
    embed = [":spark-connect-example-raw-grpc-client_lib"],
    visibility = ["//visibility:public"],
)
