load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "spark-connect-example-spark-session_lib",
    srcs = ["main.go"],
    importpath = "github.com/apache/spark-connect-go/v1/cmd/spark-connect-example-spark-session",
    visibility = ["//visibility:private"],
    deps = ["//client/sql"],
)

go_binary(
    name = "spark-connect-example-spark-session",
    embed = [":spark-connect-example-spark-session_lib"],
    visibility = ["//visibility:public"],
)
